--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -6,6 +6,7 @@
     app:cardCornerRadius="5dp"
     android:elevation="3dp"
     android:layout_margin="5dp"
+    android:background="@drawable/background_border"
     >
     <LinearLayout
         android:layout_width="match_parent"
