--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -6,101 +6,29 @@
     app:cardCornerRadius="5dp"
     android:elevation="3dp"
     android:layout_margin="5dp"
-    android:background="@drawable/background_border"
-    >
+    android:background="@drawable/background_border">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
+                android:textAlignment="center"
             android:id="@+id/title_list_item"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="32dp"
-            android:paddingRight="8dp"
-            android:paddingStart="32dp"
-            android:paddingEnd="8dp"
-            android:layout_marginBottom="16dp"
-
+                android:layout_marginBottom="10dp"
             android:text="@string/movie_title_string"
             android:textSize="20sp"
-            android:textStyle="bold|italic"
-            />
+            android:textStyle="bold|italic"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            >
+        <ImageView
+                android:id="@+id/image_detail_frag"
+                android:layout_width="130dp"
+                android:layout_height="130dp"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_marginBottom="4dp"
-
-                android:text="Duración:"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/runtime_list_item"
-
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_marginBottom="4dp"
-
-                android:text="@string/n_a_value"
-                android:textSize="18sp"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_marginBottom="4dp"
-
-                android:text="Género:"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/genre_list_item"
-
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_marginBottom="4dp"
-
-                android:text="@string/n_a_value"
-                android:textSize="18sp"
-                />
-
-        </LinearLayout>
 
     </LinearLayout>
 
