--- a/app/src/main/res/layout/main_content_fragment_layout.xml
+++ b/app/src/main/res/layout/main_content_fragment_layout.xml
@@ -8,53 +8,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="3">
 
         <ImageView
             android:id="@+id/image_main_content_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
-            />
-
-        <TextView
-            android:id="@+id/movie_title_main_content_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/image_main_content_fragment"
-            android:layout_alignRight="@id/image_main_content_fragment"
-            android:layout_alignBottom="@id/image_main_content_fragment"
-            android:layout_margin="16dp"
-
-            android:background="#65000000"
-            android:gravity="end"
-
-            android:lines="1"
-            android:padding="8dp"
-
-            android:text="@string/movie_title_string"
-            android:textColor="#fff"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/movie_rate_main_content_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/image_main_content_fragment"
-            android:layout_alignLeft="@id/image_main_content_fragment"
-            android:layout_alignTop="@id/image_main_content_fragment"
-
-            android:layout_margin="16dp"
-            android:background="#65000000"
-
-            android:gravity="end"
-            android:padding="8dp"
-
-            android:text="@string/rate_ex_string"
-            android:textColor="#fff"
-
-            android:textSize="25sp" />
+            android:layout_height="450dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_launcher_background"/>
 
     </RelativeLayout>
 
@@ -70,6 +31,16 @@
             android:layout_height="wrap_content">
 
             <TextView
+                    android:text="@string/movie_title_string"
+                    android:textSize="30dp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:id="@+id/movie_title_main_content_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            <TextView
                 android:id="@+id/plot_main_content_fragment"
 
                 android:layout_width="match_parent"
@@ -83,11 +54,44 @@
                 />
 
             <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+            >
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="Score:"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                />
+
+                <TextView
+                        android:id="@+id/movie_rate_main_content_fragment"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/n_a_value"
+                        android:textSize="18sp"
+                />
+
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                >
+                android:layout_marginBottom="8dp">
 
                 <TextView
                     android:layout_width="0dp"
@@ -96,7 +100,6 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:layout_marginBottom="4dp"
-
                     android:text="Año:"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -104,7 +107,6 @@
 
                 <TextView
                     android:id="@+id/released_main_content_fragment"
-
                     android:layout_width="0dp"
                     android:layout_weight="3"
                     android:layout_height="wrap_content"
