--- a/app/src/main/res/layout/viewer_movie.xml
+++ b/app/src/main/res/layout/viewer_movie.xml
@@ -1,66 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".gui.activities.MovieViewerActivity">
+                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                     xmlns:tools="http://schemas.android.com/tools"
+                                                     android:layout_width="match_parent"
+                                                     android:layout_height="match_parent"
+                                                     tools:context=".gui.activities.MovieViewerActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarviewer"
-        android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:fitsSystemWindows="true">
+            android:id="@+id/appbarviewer"
+            android:layout_width="match_parent"
+            android:layout_height="256dp"
+            android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingtoolbarviewer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
-            app:contentScrim="?attr/colorPrimaryDark"
-            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
-            app:title="@string/n_a_value"
-            app:toolbarId="@id/toolbarviewer">
-
-            <ImageView
-                android:id="@+id/app_bar_image_viewer"
+                android:id="@+id/collapsingtoolbarviewer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                android:fitsSystemWindows="true"
+                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
+                app:contentScrim="?attr/colorPrimaryDark"
+                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
+                app:title="@string/n_a_value"
+                app:toolbarId="@id/toolbarviewer">
+
+            <ImageView
+                    android:id="@+id/app_bar_image_viewer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax" />
 
             <TextView
-                android:id="@+id/app_bar_rating_viewer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:background="#65000000"
-                android:padding="8dp"
-                android:text="@string/n_a_value"
-                android:textColor="#fff"
-                android:textSize="25sp" />
+                    android:id="@+id/app_bar_rating_viewer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:background="#65000000"
+                    android:padding="8dp"
+                    android:text="@string/n_a_value"
+                    android:textColor="#fff"
+                    android:textSize="25sp" />
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbarviewer"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                    android:id="@+id/toolbarviewer"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/plot_viewer"
@@ -74,66 +74,68 @@
                     android:text="@string/n_a_value"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/genre_viewer" android:layout_marginTop="16dp"
-            android:justificationMode="inter_word"/>
+                    android:justificationMode="inter_word"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintTop_toBottomOf="@+id/TextView4"/>
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Director:"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/plot_viewer" />
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="Director:"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 
             <TextView
                     android:id="@+id/director_viewer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:fontFamily="@font/roboto_light"
+                    android:textStyle="bold"
                     android:text="@string/n_a_value"
-                    app:layout_constraintStart_toEndOf="@+id/textView"
-                    app:layout_constraintTop_toTopOf="@+id/textView"/>
+                    app:layout_constraintTop_toTopOf="@+id/textView"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView"/>
 
             <TextView
-                android:id="@+id/TextView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Actors:"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                    android:id="@+id/TextView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="Actors:"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <TextView
                     android:id="@+id/actors_viewer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
                     android:fontFamily="@font/roboto_light"
                     android:text="@string/n_a_value"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/TextView4"
-                    app:layout_constraintTop_toTopOf="@+id/TextView4"/>
+                    app:layout_constraintTop_toTopOf="@+id/TextView4"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
+                    app:layout_constraintStart_toEndOf="@+id/TextView4"/>
             <TextView
                     android:text="@string/n_a_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/genre_viewer" android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+                    android:id="@+id/rated_viewer"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
                     android:fontFamily="@font/roboto_light"/>
             <TextView
                     android:text="@string/n_a_value"
@@ -141,8 +143,54 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/released_viewer"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-                    app:layout_constraintTop_toTopOf="@+id/genre_viewer" android:fontFamily="@font/roboto_light"/>
+                    android:layout_marginEnd="36dp"
+                    android:layout_marginRight="36dp"
+                    android:fontFamily="@font/roboto_light"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:text="Country:"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp"
+                    android:textStyle="bold" android:layout_marginTop="25dp"
+                    app:layout_constraintTop_toBottomOf="@+id/rated_viewer"/>
+            <TextView
+                    android:text="N/A"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_light"
+                    android:id="@+id/country_viewer"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:text="Genre:"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView4"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp" android:textStyle="bold"/>
+            <TextView
+                    android:text="N/A"
+                    android:fontFamily="@font/roboto_light"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/genre_viewer"
+                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/country_viewer"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
