--- a/app/src/main/res/layout/viewer_movie.xml
+++ b/app/src/main/res/layout/viewer_movie.xml
@@ -63,6 +63,7 @@
                 android:layout_height="wrap_content">
 
             <TextView
+                    android:textColor="@android:color/black"
                     android:id="@+id/plot_viewer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -95,13 +96,13 @@
                     android:id="@+id/director_viewer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_light"
-                    android:textStyle="bold"
+                    android:textColor="@android:color/black"
                     android:text="@string/n_a_value"
                     app:layout_constraintTop_toTopOf="@+id/textView"
                     android:layout_marginLeft="36dp"
                     android:layout_marginStart="36dp"
-                    app:layout_constraintStart_toEndOf="@+id/textView"/>
+                    app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 
             <TextView
                     android:id="@+id/TextView4"
@@ -120,13 +121,16 @@
                     android:id="@+id/actors_viewer"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_light"
+                    android:textColor="@android:color/black"
                     android:text="@string/n_a_value"
                     app:layout_constraintTop_toTopOf="@+id/TextView4"
                     android:layout_marginLeft="36dp"
                     android:layout_marginStart="36dp"
-                    app:layout_constraintStart_toEndOf="@+id/TextView4"/>
+                    app:layout_constraintStart_toEndOf="@+id/TextView4"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"/>
             <TextView
+                    android:textColor="@android:color/black"
                     android:text="@string/n_a_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -135,9 +139,9 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="36dp"
-                    android:layout_marginStart="36dp"
-                    android:fontFamily="@font/roboto_light"/>
+                    android:layout_marginStart="36dp"/>
             <TextView
+                    android:textColor="@android:color/black"
                     android:text="@string/n_a_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -145,7 +149,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="36dp"
                     android:layout_marginRight="36dp"
-                    android:fontFamily="@font/roboto_light"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toTopOf="parent"/>
             <TextView
@@ -161,14 +164,16 @@
                     app:layout_constraintTop_toBottomOf="@+id/rated_viewer"/>
             <TextView
                     android:text="N/A"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_light"
+                    android:textColor="@android:color/black"
                     android:id="@+id/country_viewer"
                     android:layout_marginLeft="36dp"
                     android:layout_marginStart="36dp"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
-                    android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp"/>
             <TextView
                     android:text="Genre:"
                     android:fontFamily="@font/roboto_medium"
@@ -182,15 +187,16 @@
                     android:layout_marginStart="36dp" android:textStyle="bold"/>
             <TextView
                     android:text="N/A"
-                    android:fontFamily="@font/roboto_light"
-                    android:layout_width="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/genre_viewer"
                     android:layout_marginLeft="36dp"
                     android:layout_marginStart="36dp"
                     app:layout_constraintStart_toEndOf="@+id/textView4"
                     android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@+id/country_viewer"/>
+                    app:layout_constraintTop_toBottomOf="@+id/country_viewer" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
